# Gated-Sparse-Attention

./: README-development.md  README-quickstart.md  README.md  pyproject.toml  requirements.txt
data/: prepare_data.py
data/packed/: metadata.json
docs/: CHECKPOINT_RESUME.md  MEMORY_OPTIMIZATION.md  datasets.md
evaluation/: evaluate.py
evaluation/benchmarks/: __init__.py  attention_analysis.py  downstream_tasks.py  language_modeling.py  long_context.py
gated_sparse_attention.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gsa/: __init__.py  config.py
gsa/attention/: __init__.py  adaptive_topk.py  gated_indexer.py  gated_sparse_attention.py  output_gate.py  rope.py  value_gate.py
gsa/kernels/: __init__.py  triton_gated_attn.py  triton_indexer.py  triton_sparse_attn.py
gsa/models/: __init__.py  gsa_llama.py
gsa/utils/: __init__.py  checkpoint.py  convert.py  profiling.py  seed.py
scripts/: create_full_gsa.py  download_data.sh  run_pretrain.sh  test_memory_fix.py  test_resume.py
scripts/.ipynb_checkpoints/: basic-checkpoint.py
tests/: test_attention.py  test_gates.py  test_indexer.py
training/: data.py  optimizer.py  train.py  trainer.py
training/configs/: pretrain_1b.yaml  pretrain_512m_low_memory-Copy1.yaml  pretrain_512m_low_memory.yaml  pretrain_512m_medium_memory.yaml
training/configs/.ipynb_checkpoints/: pretrain_1b-checkpoint.yaml  pretrain_512m_low_memory-checkpoint.yaml
