[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gated-sparse-attention"
version = "0.1.0"
description = "Gated Sparse Attention: Combining Computational Efficiency with Training Stability for Long-Context Language Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GSA Team", email = "gsa@example.com"}
]
keywords = ["attention", "transformer", "sparse", "gated", "long-context", "nlp", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "einops>=0.8.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
training = [
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
    "triton>=2.3.0",
    "bitsandbytes>=0.43.0",
    "wandb>=0.17.0",
    "tensorboard>=2.16.0",
]
eval = [
    "datasets>=2.19.0",
    "lm-eval>=0.4.2",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "hypothesis>=6.100.0",
]
all = [
    "gated-sparse-attention[training,eval,dev]",
]

[project.urls]
Homepage = "https://github.com/alfredcs/gated-sparse-attention"
Repository = "https://github.com/alfredcs/gated-sparse-attention"
Issues = "https://github.com/alfredcs/gated-sparse-attention/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gsa*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
